--- a/hijab.html
+++ b/hijab.html
@@ -508,35 +508,35 @@
 
   <div class="products-container" >
 
-    <div class="product-card" data-name="بندانة" data-price="400" data-img="img/HEJAB/b1.jpg">
+    <div class="product-card" data-name="بندانة1" data-price="400" data-img="img/HEJAB/b1.jpg">
       <img src="img/HEJAB/b1.jpg" alt="منتج 1">
       <h3>بندانة </h3>
       <p></p>
       <p class="price" data-original-price="400">EG 400</p>
       <button class="add-to-cart">إضافة إلى السلة</button>
     </div> 
-     <div class="product-card" data-name="بندانة" data-price="400" data-img="img/HEJAB/b2.jpg">
+     <div class="product-card" data-name="بندانة2" data-price="400" data-img="img/HEJAB/b2.jpg">
       <img src="img/HEJAB/b2.jpg" alt="منتج 2">
       <h3>بندانة </h3>
       <p></p>
       <p class="price" data-original-price="400">EG 400</p>
       <button class="add-to-cart">إضافة إلى السلة</button>
     </div> 
-     <div class="product-card" data-name="بندانة" data-price="400" data-img="img/HEJAB/b3.jpg">
+     <div class="product-card" data-name="بندانة3" data-price="400" data-img="img/HEJAB/b3.jpg">
       <img src="img/HEJAB/b3.jpg" alt="منتج 3">
       <h3>بندانة </h3>
       <p></p>
       <p class="price" data-original-price="400">EG 400</p>
       <button class="add-to-cart">إضافة إلى السلة</button>
     </div> 
-     <div class="product-card" data-name="بندانة" data-price="400" data-img="img/HEJAB/b4.jpg">
+     <div class="product-card" data-name="بندانة4" data-price="400" data-img="img/HEJAB/b4.jpg">
       <img src="img/HEJAB/b4.jpg" alt="منتج 4">
       <h3>بندانة </h3>
       <p></p>
       <p class="price" data-original-price="400">EG 400</p>
       <button class="add-to-cart">إضافة إلى السلة</button>
     </div> 
-     <div class="product-card" data-name="بندانة" data-price="400" data-img="img/HEJAB/b5.jpg">
+     <div class="product-card" data-name="بندانة5" data-price="400" data-img="img/HEJAB/b5.jpg">
       <img src="img/HEJAB/b5.jpg" alt="منتج 5">
       <h3>بندانة </h3>
       <p></p>
