--- a/Accessories.html
+++ b/Accessories.html
@@ -943,9 +943,41 @@
     </div>
   </footer>
 
-  <script>
+  <!-- نافذة المودال -->
+  <div class="modal" id="productModal">
+    <div class="modal-content">
+      <span class="close-modal" id="closeModal">&times;</span>
+      <img id="modalImage" src="" alt="صورة المنتج">
+      <h3 id="modalTitle"></h3>
+      <p class="price" id="modalPrice"></p>
+      <button class="buy-now" id="buyNowBtn">شراء المنتج الآن</button>
+    </div>
+  </div>
+  
+  
+  <!-- صفحة تأكيد الطلب -->
+  <div id="confirmationPage" class="confirmation-modal" style="display:none;">
+    <div class="confirmation-content">
+      <h3>تأكيد الطلب</h3>
+      <label>📍 العنوان *</label>
+      <input type="text" id="userAddress" placeholder="اكتب العنوان" required>
+  
+      <label>📞 رقم الموبايل *</label>
+      <input type="tel" id="userPhone" placeholder="اكتب رقم الهاتف" required>
+  
+      <label>📝 ملاحظات (اختياري)</label>
+      <textarea id="userNotes" placeholder="اكتب أي ملاحظات..."></textarea>
+  
+      <div style="margin-top: 15px; text-align: center;">
+        <button onclick="sendOrder()">تأكيد الطلب</button>
+        <button onclick="closeConfirmation()">إلغاء</button>
+      </div>
+    </div>
+  </div>
 
- function scrollToTop() {
+<script>
+
+  function scrollToTop() {
     window.scrollTo({ top: 0, behavior: 'smooth' });
   }
 
@@ -953,7 +985,7 @@
     window.scrollTo({ top: document.body.scrollHeight, behavior: 'smooth' });
   }
 
- const cart = [];
+  const cart = [];
 
   document.querySelectorAll('.add-to-cart').forEach(button => {
     button.addEventListener('click', () => {
@@ -984,17 +1016,17 @@
       li.classList.add('cart-item');
 
       li.innerHTML = `
-    <img src="${item.img}" alt="${item.name}">
-    <div class="item-details">
-      <strong>${item.name}</strong> - ${item.price.toFixed(2)} EG
-      <div class="quantity-control">
-        <button class="decrease" data-index="${index}">-</button>
-        <span>${item.quantity}</span>
-        <button class="increase" data-index="${index}">+</button>
-        <button class="remove" data-index="${index}">🗑️</button>
-      </div>
-    </div>
-  `;
+       <img src="${item.img}" alt="${item.name}">
+       <div class="item-details">
+         <strong>${item.name}</strong> - ${item.price.toFixed(2)} EG
+         <div class="quantity-control">
+           <button class="decrease" data-index="${index}">-</button>
+           <span>${item.quantity}</span>
+           <button class="increase" data-index="${index}">+</button>
+           <button class="remove" data-index="${index}">🗑️</button>
+         </div>
+       </div>
+     `;
 
       cartItems.appendChild(li);
     });
@@ -1041,19 +1073,21 @@
       return;
     }
 
-    let message = '*طلب جديد من المتجر:*\n\n';
+    let message = '*🛒 طلب جديد من المتجر:*\n\n';
+    const githubBaseUrl = 'https://raw.githubusercontent.com/kgm531/la_femme/refs/heads/main/';
+
     cart.forEach(item => {
-      message += `🛍️ *${item.name}*\nالكمية: ${item.quantity}\nالسعر: ${item.price.toFixed(2)} EG\nالصورة: ${window.location.origin}/${item.img}\n\n`;
+      const fullImgUrl = githubBaseUrl + item.img;
+      message += `🛍️ *${item.name}*\nالكمية: ${item.quantity}\nالسعر: ${item.price.toFixed(2)} EG\n🖼️ الصورة: ${fullImgUrl}\n\n`;
     });
 
-    // حساب السعر الإجمالي عند الإرسال أيضاً
     const totalPrice = cart.reduce((sum, item) => sum + item.price * item.quantity, 0);
-    message += `\n*السعر الإجمالي: ${totalPrice.toFixed(2)} EG*`;
+    message += `\n*💵 السعر الإجمالي: ${totalPrice.toFixed(2)} EG*`;
+    document.getElementById('cart-popup').classList.remove('open');
 
-    const phoneNumber = "+201276357603"; // رقم المتجر بدون +
-    const url = `https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`;
-    window.open(url, '_blank');
+    openConfirmation(message);
   });
+
 
   function updateCartCount() {
     const count = cart.reduce((total, item) => total + item.quantity, 0);
@@ -1084,6 +1118,102 @@
     cartPopup.classList.add('open');
   }
 
-  </script>
+  const modal = document.getElementById('productModal');
+  const modalImg = document.getElementById('modalImage');
+  const modalTitle = document.getElementById('modalTitle');
+  const modalPrice = document.getElementById('modalPrice');
+  const closeModal = document.getElementById('closeModal');
+
+  document.querySelectorAll('.product-card').forEach(card => {
+    card.addEventListener('click', function (e) {
+      // منع التفاعل مع زر "إضافة إلى السلة"
+      if (e.target.tagName.toLowerCase() === 'button') return;
+
+      const img = this.dataset.img;
+      const name = this.dataset.name;
+      const price = this.dataset.price;
+
+      modalImg.src = img;
+      modalTitle.textContent = name;
+      modalPrice.textContent = `EG ${price}`;
+
+      modal.style.display = 'flex';
+    });
+  });
+
+  closeModal.addEventListener('click', () => {
+    modal.style.display = 'none';
+  });
+
+  // إغلاق النافذة عند الضغط خارج المحتوى
+  window.addEventListener('click', function (e) {
+    if (e.target === modal) {
+      modal.style.display = 'none';
+    }
+  });
+
+  /*------------------------------------*/
+  const buyNowBtn = document.getElementById('buyNowBtn');
+
+  document.querySelectorAll('.product-card').forEach(card => {
+    card.addEventListener('click', function (e) {
+      if (e.target.tagName.toLowerCase() === 'button') return;
+
+      const imgPath = this.dataset.img; // مثلاً: img/HEJAB/b1.jpg
+      const name = this.dataset.name;
+      const price = this.dataset.price;
+
+      // رابط GitHub Pages لمعرض الصور
+      const baseUrl = 'https://raw.githubusercontent.com/kgm531/la_femme/refs/heads/main/';
+      const fullImgUrl = baseUrl + imgPath;
+
+      modalImg.src = fullImgUrl;
+      modalTitle.textContent = name;
+      modalPrice.textContent = `EG ${price}`;
+
+      buyNowBtn.onclick = () => {
+        const message = `أرغب بشراء المنتج التالي:\n\n🛍 الاسم: ${name}\n💰 السعر: ${price} جنيه\n🖼 صورة المنتج:\n${fullImgUrl}`;
+        modal.style.display = 'none'; // ✅ إغلاق نافذة المنتج
+        openConfirmation(message); // فتح نموذج التأكيد قبل الإرسال
+      };
+
+      modal.style.display = 'flex';
+    });
+  });
+
+  let currentOrderMessage = ''; // تُستخدم لتخزين محتوى الطلب (سواء من السلة أو منتج واحد)
+
+  function openConfirmation(message) {
+    currentOrderMessage = message;
+    document.getElementById('confirmationPage').style.display = 'flex';
+  }
+
+  function closeConfirmation() {
+    document.getElementById('confirmationPage').style.display = 'none';
+  }
+
+  function sendOrder() {
+    const address = document.getElementById('userAddress').value.trim();
+    const phone = document.getElementById('userPhone').value.trim();
+    const notes = document.getElementById('userNotes').value.trim();
+
+    if (!address || !phone) {
+      alert("يرجى إدخال العنوان ورقم الموبايل.");
+      return;
+    }
+
+    let finalMessage = `${currentOrderMessage}\n\n📍 العنوان: ${address}\n📞 رقم الهاتف: ${phone}`;
+    if (notes) {
+      finalMessage += `\n📝 ملاحظات: ${notes}`;
+    }
+
+    const whatsappUrl = `https://wa.me/201276357603?text=${encodeURIComponent(finalMessage)}`;
+    window.open(whatsappUrl, '_blank');
+    closeConfirmation();
+  }
+
+
+</script>
+   
 </body>
 </html>
